# rdma-analyze

./: .gitignore  README.md  plan.md  review.md
.claude/skills/gh-cli/: SKILL.md
.codex/skills/read/: SKILL.md
.codex/skills/rust-safe-ffi-design/: SKILL.md
.codex/skills/rust-safe-ffi-design-workspace/iteration-1/: benchmark.json  benchmark.md  review.html
.codex/skills/rust-safe-ffi-design-workspace/iteration-2/: benchmark.json  benchmark.md  (+1 more)
.cursor/rules/: anti-patterns.md
design/: COMPARISON.md  README.md
design/use-skills/rust-ffi-design/: ARCHITECTURE.md  ASYNC-ANALYZE.md  BINDING.md  CHECKLIST.md  README.md  SAFE-API.md
design/without-skills/: DESIGN.md
docs/: README.md
docs/comparison/: SCOPE.md
docs/ffi-schemes/: README.md  bindgen-system-headers-manual-inline-in-sys.md  bindgen-system-subset-postprocess-ruapc.md  bindgen-vendored-headers-fnptr-in-safe-layer.md  c-wrapper-pregenerated-bnd-sys-headers.md  mummy-stub-bindgen-static-stub-dlopen-runtime.md
docs/guide/: README.md  architecture-decisions.md  rust-ffi-best-practices.md
docs/libz-sys/: FFI-ANALYSIS.md
ffi-docs/: README.md  async-ecosystem.md  compare-projects.md  design-output-template.md  methodology-any-c-project.md  rdma-ffi-schemes.md
obmm/: README.en.md  README.md  RELEASE-NOTES.md
obmm/doc/: README.md  libobmm.md  obmm.md  obmm_export.md  obmm_import.md  obmm_log.md  obmm_mempool_sysfs.md  obmm_preimport.md  obmm_preimport_sysfs.md  obmm_query.md  obmm_set_ownership.md  obmm_shmdev.md  obmm_shmdev_sysfs.md  obmm_unexport.md  obmm_unimport.md  obmm_unpreimport.md
obmm/src/libobmm/: CMakeLists.txt  libobmm.c  libobmm.h  libobmm_log.h  vendor_adaptor.c  vendor_adaptor.h
rdma/category-5/rdma-mummy-sys/: .gitmodules  CHANGELOG.md  Cargo.toml  build.rs
rdma/category-5/rdma-mummy-sys/.github/workflows/: ci.yml
rdma/category-5/rdma-mummy-sys/examples/: client.rs  server.rs
rdma/category-5/rdma-mummy-sys/src/: bindings.h  lib.rs  types.rs  verbs.rs
rdma/docs/ffi-schemes/: README.md  bindgen-system-headers-manual-inline-in-sys.md  bindgen-system-subset-postprocess-ruapc.md  bindgen-vendored-headers-fnptr-in-safe-layer.md  c-wrapper-pregenerated-bnd-sys-headers.md  concurrency-threading-async-vs-sync.md  mummy-stub-bindgen-static-stub-dlopen-runtime.md
rust-safe-ffi-design-skills/: SKILL.md
rust-safe-ffi-design-skills/references/: comparison.md
rust-safe-ffi-design-skills/references/cases/: rust-openssl.md
rust-safe-ffi-design-skills/references/core/: decision-questions.md  decision-rules.md  delivery-checklist.md
rust-safe-ffi-design-skills/references/maintenance/: SOURCE.md
rust-safe-ffi-design-skills/references/rdma/: rdma-sys.md  rdma.md  rust-ibverbs.md  sideway.md
rust-safe-ffi-design-skills/templates/: ARCHITECTURE.md  BINDING.md  README.md
zstd-rs/: Cargo.toml  LICENSE  Readme.md
zstd-rs/zstd-safe/: Cargo.toml
zstd-rs/zstd-safe/zstd-sys/: Cargo.toml  LICENSE.BSD-3-Clause
(+67 files in other folders)
