[package]
name = "rdma-mummy-sys"
version = "0.2.3"
authors = [
    "Luke Yue <lukedyue@gmail.com>",
    "Pu Wang <nicolas.weeks@gmail.com>",
    "FujiZ <i@fujiz.me>"
]
edition = "2021"
description = "rdma-core-mummy Rust binding"
license-file = "LICENSE"
repository = "https://github.com/RDMA-Rust/rdma-mummy-sys"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
memoffset = "0.9"
paste = "1.0"
# intrusive-collections = "0.9"

[build-dependencies]
cmake = "0.1"
bindgen = { version = "0.66", features = ["prettyplease"] }
